# predict_haq

./: README.md  pyproject.toml  requirements.txt
scripts/: launch_batch_script.sh  training_batch_script.sh
src/predict_haq/: __init__.py  preprocessing.py  results_visualisation.py  test_metrics.py  train.py
tests/: results_visualisation_test.py
